--- a/MarketingServer/Web.config
+++ b/MarketingServer/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -56,9 +56,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    
-  
-  <add name="MarketingEntities" connectionString="metadata=res://*/Marketing.csdl|res://*/Marketing.ssdl|res://*/Marketing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ZORIOTH\SQLEXPRESS;initial catalog=Marketing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="MarketingEntities" connectionString="metadata=res://*/Marketing.csdl|res://*/Marketing.ssdl|res://*/Marketing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ZORIOTH\SQLEXPRESS;initial catalog=Marketing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
