--- a/MarketingServer/Web.config
+++ b/MarketingServer/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -64,4 +64,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network">
+        <network host="smtp.gmail.com" port="587" userName="glapoint22@gmail.com" password="Cyb668622" enableSsl="true"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
