--- a/MarketingServer/MarketingServer.csproj
+++ b/MarketingServer/MarketingServer.csproj
@@ -151,6 +151,7 @@
     </Compile>
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\MailController.cs" />
+    <Compile Include="Controllers\SubscriptionsController.cs" />
     <Compile Include="Customer.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
