--- a/MarketingServer/MarketingServer.csproj
+++ b/MarketingServer/MarketingServer.csproj
@@ -162,6 +162,7 @@
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
     <Compile Include="Encryption.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -173,6 +174,7 @@
     </Compile>
     <Compile Include="Mail.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="Controllers\ProductBannersController.cs" />
     <Compile Include="Marketing.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -197,12 +199,14 @@
     <Compile Include="ProductBanner.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
-    <Compile Include="Controllers\ProductBannersController.cs" />
     <Compile Include="ProductVideo.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subscription.cs">
+      <DependentUpon>Marketing.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Vendor.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
   </ItemGroup>
