--- a/MarketingServer/MarketingServer.csproj
+++ b/MarketingServer/MarketingServer.csproj
@@ -163,6 +163,7 @@
     </Compile>
     <Compile Include="Encryption.cs" />
     <Compile Include="ExpressionBuilder.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Filter.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
