--- a/MarketingServer/MarketingServer.csproj
+++ b/MarketingServer/MarketingServer.csproj
@@ -120,8 +120,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Images\header.jpg" />
-    <Content Include="Images\ubt_ebook_600.jpg" />
     <Content Include="Marketing.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Marketing.edmx</DependentUpon>
@@ -244,6 +242,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Downloads\" />
+    <Folder Include="Images\" />
     <Folder Include="Models\" />
     <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
