Added lead magnet to niches

--- a/MarketingServer/Web.config
+++ b/MarketingServer/Web.config
@@ -56,7 +56,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MarketingEntities" connectionString="metadata=res://*/Marketing.csdl|res://*/Marketing.ssdl|res://*/Marketing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Zorioth;initial catalog=Marketing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MarketingEntities" connectionString="metadata=res://*/Marketing.csdl|res://*/Marketing.ssdl|res://*/Marketing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ZORIOTH;initial catalog=Marketing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
