--- a/MarketingServer/MarketingServer.csproj
+++ b/MarketingServer/MarketingServer.csproj
@@ -119,6 +119,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="EmailFooter.txt" />
     <Content Include="Global.asax" />
     <Content Include="Marketing.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
