--- a/EmailService/EmailService.csproj
+++ b/EmailService/EmailService.csproj
@@ -63,67 +63,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CampaignRecord.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Category.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CategoryImage.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Customer.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EmailCampaign.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Filter.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="FilterLabel.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Lead.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="LeadMagnetEmail.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Mail.cs" />
-    <Compile Include="Marketing.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Marketing.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Marketing.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Marketing.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Marketing.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Nich.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="PriceRange.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Product.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductBanner.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductFilter.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductVideo.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -138,32 +77,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Subscription.cs">
-      <DependentUpon>Marketing.tt</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EntityDeploy Include="Marketing.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Marketing.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="Marketing.edmx.diagram">
-      <DependentUpon>Marketing.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Marketing.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Marketing.edmx</DependentUpon>
-      <LastGenOutput>Marketing.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Marketing.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Marketing.edmx</DependentUpon>
-      <LastGenOutput>Marketing.cs</LastGenOutput>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -172,6 +89,12 @@
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MarketingServer\MarketingServer.csproj">
+      <Project>{0c995540-649e-4634-a51f-7bce97adf264}</Project>
+      <Name>MarketingServer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
