--- a/MarketingServer/Web.config
+++ b/MarketingServer/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -17,7 +17,6 @@
     </httpModules>
   </system.web>
   <system.webServer>
-    
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="TelemetryCorrelationHttpModule" />
@@ -25,12 +24,13 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -77,7 +77,7 @@
   </runtime>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Users.mdf;Initial Catalog=Users;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MarketingEntities" connectionString="metadata=res://*/Marketing.csdl|res://*/Marketing.ssdl|res://*/Marketing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ZORIOTH;initial catalog=Marketing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MarketingEntities" connectionString="metadata=res://*/Marketing.csdl|res://*/Marketing.ssdl|res://*/Marketing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Marketing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <!-- other setting here -->
