--- a/MarketingServer/MarketingServer.csproj
+++ b/MarketingServer/MarketingServer.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <FilesToIncludeForPublish>OnlyFilesToRunTheApp</FilesToIncludeForPublish>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -189,6 +190,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationOAuthProvider.cs" />
+    <Compile Include="ApplicationRefreshTokenProvider.cs" />
     <Compile Include="ApplicationUserManager.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Campaign.cs" />
@@ -200,6 +202,9 @@
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
     <Compile Include="CategoryImage.cs">
+      <DependentUpon>Marketing.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Client.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
@@ -232,6 +237,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hashing.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="LeadMagnetEmail.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
@@ -276,11 +282,11 @@
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Startup.cs" />
-    <Compile Include="Subscription.cs">
+    <Compile Include="RefreshToken.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
-    <Compile Include="Token.cs">
+    <Compile Include="Startup.cs" />
+    <Compile Include="Subscription.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
     <Compile Include="User.cs" />
@@ -296,6 +302,7 @@
     <Content Include="Marketing.edmx.diagram">
       <DependentUpon>Marketing.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\fdsafaa.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -308,7 +315,6 @@
     <Folder Include="Downloads\" />
     <Folder Include="Images\" />
     <Folder Include="Models\" />
-    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
