--- a/MarketingServer/Web.config
+++ b/MarketingServer/Web.config
@@ -92,7 +92,7 @@
   </entityFramework>
   <system.net>
     <mailSettings>
-      <smtp deliveryMethod="Network">
+      <smtp deliveryMethod="Network" from="Niche Shack">
         <network host="smtp.gmail.com" port="587" userName="glapoint22@gmail.com" password="Cyb668622" enableSsl="true" />
       </smtp>
     </mailSettings>
