Added file manager

--- a/MarketingServer/MarketingServer.csproj
+++ b/MarketingServer/MarketingServer.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Encryption.cs" />
     <Compile Include="ExpressionBuilder.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="FileManager.cs" />
     <Compile Include="Filter.cs">
       <DependentUpon>Marketing.tt</DependentUpon>
     </Compile>
