--- a/MarketingServer/Web.config
+++ b/MarketingServer/Web.config
@@ -78,7 +78,7 @@
   </runtime>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Users.mdf;Initial Catalog=Users;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MarketingEntities" connectionString="metadata=res://*/Marketing.csdl|res://*/Marketing.ssdl|res://*/Marketing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Marketing;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MarketingEntities" connectionString="metadata=res://*/Marketing.csdl|res://*/Marketing.ssdl|res://*/Marketing.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=NicheShack;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <!-- other setting here -->
